# command-line-tweeter

./: .gitignore  .hlint.yaml  .travis.yml  Justfile  LICENSE  README.md  TODO.md  appveyor.yml  bytes.txt  cabal.project.local  carol  clit.cabal  default.nix  file  mytweets  release.nix  result  shitpost.cabal  stack-8.0.yaml  stack.yaml  tweet-hs.cabal
app/: Main.hs
bash/: example  mkCompletions
bench/: Bench.hs
doc/: index.html
ion/: testnew
src/: .Tweet.hs.swp  Tweet.hs
src/Web/: .Exec.hs.swp  .Tweet.hs.swp  Exec.hs  Tweet.hs
src/Web/Tweet/: API.hs  Exec.hs  Parser.hs  Sign.hs  Types.hs  Utils.hs
src/Web/Tweet/API/: Internal.hs
src/Web/Tweet/Parser/: FastParser.hs
src/Web/Tweet/Utils/: API.hs  Colors.hs
test/: Spec.hs  data  data.old
