name:                clit
version:             0.1.1.1
synopsis:            Post tweets from stdin
description:         a Command Line Interface Tweeter
homepage:            https://github.com/vmchale/command-line-tweeter#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           2016 Vanessa McHale
category:            Web
build-type:          Simple
stability:           stable
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Tweet
                     , Web.Exec
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-client-tls
                     , http-client
                     , http-types
                     , authenticate-oauth
                     , bytestring
                     , split
                     , optparse-applicative < 0.13.0.0
  default-language:    Haskell2010

executable tweet
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clit
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/command-line-tweeter
