name:                clit
version:             0.3.2.0
synopsis:            Post tweets from stdin
description:         a Command Line Interface Tweeter
homepage:            https://github.com/vmchale/command-line-tweeter#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           2016 Vanessa McHale
category:            Web
build-type:          Simple
stability:           stable
extra-source-files:  README.md, stack.yaml, bash/mkCompletions, bash/example
cabal-version:       >=1.10

Flag llvm-fast {
  Description: Enable build with llvm backend
  Default: False
}

library
  hs-source-dirs:      src
  exposed-modules:     Web.Tweet
                     , Web.Tweet.Exec
  other-modules:       Web.Tweet.Types
                     , Web.Tweet.Utils
                     , Web.Tweet.Sign
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-client-tls
                     , http-client
                     , http-types
                     , authenticate-oauth
                     , bytestring
                     , split
                     , optparse-applicative 
                     , lens
                     , data-default
                     , text
                     , megaparsec
                     , ansi-wl-pprint
                     , MissingH
                     , directory
  default-language:    Haskell2010

executable tweet
  hs-source-dirs:      app
  main-is:             Main.hs
  if flag(llvm-fast)
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N -fllvm -optlo-O3 -O3
  else
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clit 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/command-line-tweeter
