name:                shitpost
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vmchale/shitpost#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           2016 Vanessa McHale
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tweet
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-client-tls
                     , http-client
                     , http-types
                     , authenticate-oauth
                     , bytestring
  default-language:    Haskell2010

executable shitpost
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , shitpost
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/shitpost
